--- a/src/styles/components/_case-file-modal.scss
+++ b/src/styles/components/_case-file-modal.scss
@@ -487,13 +487,17 @@
                   font-style: normal;
                   font-weight: 400;
                   font-size: 14px;
-                  line-height: 130%;
-                  /* or 18px */
+                  line-height: 18px;
+                  color: $color-carbon;
+                  margin-top: 0.5rem;
+                }
 
-
-                  /* cabon */
-
-                  color: #1F1511;
+                small {
+                  display: block;
+                  font-size: 12px;
+                  line-height: 13px;
+                  margin-top: 0.5rem;
+                  max-width: 15.25rem;
                 }
               }
             }
