fix: :art: Add v3 content / Fix styles

--- a/src/components/Skeleton/SkeletonDesktop.astro
+++ b/src/components/Skeleton/SkeletonDesktop.astro
@@ -28,6 +28,10 @@ const { type } = Astro.props;
         }
 
         {
+            /* 
+                - Filter the data to get the correct type of data
+                - Map over the data to create the options
+            **/
             data
                 .filter((item) => item.type == type)
                 .map((item) => (
