🐛 Change assets and some styles

--- a/src/styles/components/_patient-case-file.scss
+++ b/src/styles/components/_patient-case-file.scss
@@ -111,7 +111,7 @@
 
       .profile__pic {
         position: relative;
-        top: -35px;
+        top: -14px;
         left: 5px;
         width: 191px;
       }
@@ -217,8 +217,8 @@
 
     .button {
       position: absolute;
-      right: 0;
-      bottom: 0;
+      right: 1px;
+      bottom: 1px;
       z-index: 2;
     }
   }
