--- a/src/styles/components/_pinch-to-zoom.scss
+++ b/src/styles/components/_pinch-to-zoom.scss
@@ -4,6 +4,8 @@
   width: 100% !important;
   padding: .5rem 1rem;
 
+  background-color: transparent;
+
   &.fancybox__content {
     background-color: rgba(3, 3, 3, 0.8);
   }
