--- a/src/styles/components/_accordions.scss
+++ b/src/styles/components/_accordions.scss
@@ -92,6 +92,41 @@
       margin-bottom: 1rem
     }
 
+    .result-table {
+        table-layout: fixed;
+        margin-bottom: 1rem;
+        width: 100%;
+        max-width: 20.5rem;
+
+        th, td {
+            border: 1px solid $color-black;
+            padding: .40rem .5rem;
+
+            
+            font-family: "oswald", sans-serif;
+        }
+
+        th {
+            padding: .25rem 0;
+        }
+
+        td {
+            font-size: .875rem;
+            line-height: 20px;
+
+            &:not(:first-of-type) {
+                text-align: center;
+                font-family: Barlow, Arial, Helvetica, sans-serif;
+            }
+        }
+
+        th {
+            font-size: .875rem;
+            text-transform: uppercase;
+            background: rgba(82, 108, 173, 0.3);
+        }
+    }
+
     .acc-table {
       display: flex;
       margin-bottom: 1rem;
@@ -197,8 +232,8 @@
     border-top: 0;
     border-bottom: 1px solid $color-black;
     padding-top: .9331rem;
-    padding-right: 1.5rem;
-    padding-left: 1.5rem;
+    padding-right: .75rem;
+    padding-left: .75rem;
   }
 
 
