--- a/src/styles/components/_case-file-modal.scss
+++ b/src/styles/components/_case-file-modal.scss
@@ -1,6 +1,6 @@
 .case__files_modal {
   padding: 0;
-  background-color: $color-white !important;
+  background-color: $color-cararra !important;
   --custom-folder-color: #dcc094;
 
   &.--desktop {
@@ -21,7 +21,7 @@
     right: 1rem;
     font-family: 'Barlow';
     font-weight: 600;
-    font-size: 2.5rem;
+    font-size: 1.75rem;
     line-height: 100%;
     color: $color-carbon;
     cursor: pointer;
